// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityStore ignores retainment count for ROOT_QUERY 1`] = `
{
  "Author:Allie Brosh": {
    "__typename": "Author",
    "name": "Allie Brosh",
  },
  "Book:1982156945": {
    "__typename": "Book",
    "author": {
      "__ref": "Author:Allie Brosh",
    },
    "title": "Solutions and Other Problems",
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "book": {
      "__ref": "Book:1982156945",
    },
  },
  "__META": {
    "extraRootIds": [
      "Author:Allie Brosh",
    ],
  },
}
`;

exports[`EntityStore ignores retainment count for ROOT_QUERY 2`] = `
{
  "Author:Allie Brosh": {
    "__typename": "Author",
    "name": "Allie Brosh",
  },
  "__META": {
    "extraRootIds": [
      "Author:Allie Brosh",
    ],
  },
}
`;
